@@ -1,6 +1,5 @@
 maintenance:
 categories not existing anymore (deleted from table categories) should be removed also from alb_cats and img_cats
 
-Bilder upload: nur die Alben anzueigen, für die uploadberechtigung besteht
-
+Anzeige Einzelbnild als Modal
 
