@@ -88,8 +88,10 @@ define('_MI_WGGALLERY_MAXHEIGHT_ALBIMAGE', 'Maximum height album images');
 define('_MI_WGGALLERY_MAXHEIGHT_ALBIMAGE_DESC', 'Set the max height to which uploaded images should be scaled for album images (in pixel)<br>If you use an image of the album itself this option has no effect');
 define('_MI_WGGALLERY_GALLERY_TARGET', 'Target for gallery');
 define('_MI_WGGALLERY_GALLERY_TARGET_DESC', 'Please select where a gallery should be opened');
-define('_MI_WGGALLERY_GALLERY_TARGET_SELF', 'Same window/tab');
-define('_MI_WGGALLERY_GALLERY_TARGET_BLANK', 'New window/tab');
+define('_MI_WGGALLERY_LINK_TARGET_SELF', 'Same window/tab');
+define('_MI_WGGALLERY_LINK_TARGET_BLANK', 'New window/tab');
+define('_MI_WGGALLERY_IMAGE_TARGET', 'Target for single image');
+define('_MI_WGGALLERY_IMAGE_TARGET_DESC', 'Please select where a single image should be shown');
 define('_MI_WGGALLERY_ADDJQUERY', 'Add jquery library');
 define('_MI_WGGALLERY_ADDJQUERY_DESC', 'If you use already jquery (e.g. in your theme) then set to NO');
 define('_MI_WGGALLERY_PANEL_TYPE', 'Panel Type');
