@@ -92,8 +92,10 @@ define('_MI_WGGALLERY_MAXHEIGHT_ALBIMAGE', 'Maximale Höhe für Albumbilder');
 define('_MI_WGGALLERY_MAXHEIGHT_ALBIMAGE_DESC', 'Definieren Sie die maximale Höhe, auf die die hochgeladenen Bilder für Format "Albumbilder" automatisch verkleinert werden sollen (in pixel)<br>Wenn Sie ein Bild aus dem Album verwenden so hat diese Option keine Auswirkung');
 define('_MI_WGGALLERY_GALLERY_TARGET', 'Ziel für Galerien');
 define('_MI_WGGALLERY_GALLERY_TARGET_DESC', 'Bitte legen Sie fest, wo eine Bildergalerie (Slideshow) geöffnet werden soll');
-define('_MI_WGGALLERY_GALLERY_TARGET_SELF', 'Gleiches Fenster/gleicher Tab');
-define('_MI_WGGALLERY_GALLERY_TARGET_BLANK', 'Neues Fenster/neuer Tab');
+define('_MI_WGGALLERY_LINK_TARGET_SELF', 'Gleiches Fenster/gleicher Tab');
+define('_MI_WGGALLERY_LINK_TARGET_BLANK', 'Neues Fenster/neuer Tab');
+define('_MI_WGGALLERY_IMAGE_TARGET', 'Ziel für Einzelbild');
+define('_MI_WGGALLERY_IMAGE_TARGET_DESC', 'Bitte legen Sie fest, wo ein einzelnes Bildn angezeigt werden soll');
 define('_MI_WGGALLERY_ADDJQUERY', 'jquery library hinzufügen');
 define('_MI_WGGALLERY_ADDJQUERY_DESC', 'Wenn Sie bereits jquery implentiert haben (z.B. durch Ihr Theme), dann bitte "Nein" wählen');
 define('_MI_WGGALLERY_PANEL_TYPE', 'Panel Type');
