@@ -19,7 +19,7 @@
                                     <div class='col-xs-3 wgg-img-sort'><{$image.title}></div>
                                     <div class='col-xs-1 wgg-img-sort'><{$image.date}></div>
                                     <div class='col-xs-5 wgg-img-sort right'>
-                                        <a class='btn btn-default wgg-btn-small' href='<{$wggallery_url}>/images.php?op=show&amp;img_id=<{$image.id}>&amp;alb_id=<{$image.albid}>&amp;start=<{$start}>&amp;limit=<{$limit}>&amp;img_submitter=<{$img_submitter}>&amp;redir_op=manage' title='<{$smarty.const._CO_WGGALLERY_IMAGE_SHOW}>'>
+                                        <a class='btn btn-default wgg-btn-small' href='<{$wggallery_url}>/images.php?op=show&amp;img_id=<{$image.id}>&amp;alb_id=<{$image.albid}>&amp;start=<{$start}>&amp;limit=<{$limit}>&amp;img_submitter=<{$img_submitter}>&amp;redir_op=manage' title='<{$smarty.const._CO_WGGALLERY_IMAGE_SHOW}>' target='<{$image_target}>'>
                                             <img class='wgg-btn-icon' src='<{$wggallery_icon_url_16}>show.png' alt='<{$smarty.const._CO_WGGALLERY_IMAGE_SHOW}>'>
                                         </a>
                                         <a class='btn btn-default wgg-btn-small' href='<{$wggallery_url}>/images.php?op=edit&amp;img_id=<{$image.id}>&amp;redir_op=manage' title='<{$smarty.const._EDIT}>'>
