@@ -457,19 +457,19 @@ $modversion['config'][] = [
     'formtype'    => 'select',
     'valuetype'   => 'text',
     'default'     => '_self',
-    'options'     => ['_MI_WGGALLERY_GALLERY_TARGET_SELF' => '_self', '_MI_WGGALLERY_GALLERY_TARGET_BLANK' => '_blank'],
+    'options'     => ['_MI_WGGALLERY_LINK_TARGET_SELF' => '_self', '_MI_WGGALLERY_LINK_TARGET_BLANK' => '_blank'],
 ];
 
 // target for show single image
-/* $modversion['config'][] = [
+$modversion['config'][] = [
     'name'        => 'image_target',
     'title'       => '_MI_WGGALLERY_IMAGE_TARGET',
     'description' => '_MI_WGGALLERY_IMAGE_TARGET_DESC',
     'formtype'    => 'select',
-    'valuetype'   => 'int',
-    'default'     => 0,
-    'options'     => ['_MI_WGGALLERY_IMAGE_TARGET_INFO' => 0, '_MI_WGGALLERY_IMAGE_TARGET_SINGLE' => 1],
-]; */
+    'valuetype'   => 'text',
+    'default'     => '_self',
+    'options'     => ['_MI_WGGALLERY_LINK_TARGET_SELF' => '_self', '_MI_WGGALLERY_LINK_TARGET_BLANK' => '_blank'],
+];
 
 // Panel by
 $modversion['config'][] = [
